--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 body {
-  background-color: #f0f3fb;
+  /* background-color: #192d50; */
+  background-color: #fefefe;
   font-family: "Poppins";
 }
