--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --main-color: #ffb404;
+}
+
 body {
-  /* background-color: #192d50; */
-  background-color: #fefefe;
+  background-color: #192d50;
+  /* background-color: #fefefe; */
   font-family: "Poppins";
+}
+
+.float-anim {
+  animation: floatImage 4s ease-in-out infinite;
+}
+
+@keyframes floatImage {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-1.2rem);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.btn {
+  box-shadow: 0 0 1.5rem var(--main-color);
+}
+.btn:hover {
+  box-shadow: 0 0 1rem var(--main-color);
 }
