--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: #192d50;
+  /* background-color: #192d50; */
   /* background-color: #fefefe; */
   font-family: "Poppins";
 }
@@ -28,9 +28,9 @@ body {
   }
 }
 
-.btn {
+/* .btn {
   box-shadow: 0 0 1.5rem var(--main-color);
 }
 .btn:hover {
   box-shadow: 0 0 1rem var(--main-color);
-}
+} */
